@@ -71,7 +71,7 @@ if failed_import_dict:\n
 \n
  message = "The following component could not be imported: " + \', \'.join(failed_import_formatted_list)\n
 else:\n
- message = "All components were successfully imported from filesystem to ZODB."\n
+ message = "All components were successfully imported from filesystem to ZODB. You can now delete them from your instance home."\n
 \n
 return context.Base_redirect(\'view\',\n
                              keep_items={\'portal_status_message\': message})\n
