@@ -1,3 +1,6 @@
+2013-06-24 arnaud.fontaine
+* Meaningless to remove ZODB Components migrated from FS. This will not work when there are several nodes anyway, so just display a message to the user.
+
 2013-06-19 arnaud.fontaine
 * Add 'does' to the closed-class words list in naming convention checking script.
 
